launchpad-buildd (165) UNRELEASED; urgency=medium

  [ Steve Langasek, Tobias Koch ]
  * buildlivefs: support passing an IMAGE_TARGETS variable into the
    environment, for projects (i.e., ubuntu-cpc) that produce multiple
    images as part of a single build, in order to be selective about what
    builds to run.

 -- Colin Watson <cjwatson@ubuntu.com>  Tue, 09 Oct 2018 11:38:07 +0200

launchpad-buildd (164) xenial; urgency=medium

  * Configure snap proxy settings for Subversion (LP: #1668358).

 -- Colin Watson <cjwatson@ubuntu.com>  Thu, 16 Aug 2018 16:32:41 +0100

launchpad-buildd (163) xenial; urgency=medium

  * Revert change to tolerate chroot tarballs with a top-level directory
    other than chroot-autobuild/; this breaks symlink unpacking.

 -- Colin Watson <cjwatson@ubuntu.com>  Wed, 13 Jun 2018 00:23:35 +0100

launchpad-buildd (162) xenial; urgency=medium

  * Set the hostname and FQDN of LXD containers to match the host system,
    though with an IP address pointing to the container (LP: #1747015).
  * Tolerate chroot tarballs with a top-level directory other than
    chroot-autobuild/.
  * If the extra build arguments include fast_cleanup: True, then skip the
    final cleanup steps of the build.  This can be used when building in a
    VM that is guaranteed to be torn down after the build.
  * Refactor VCS operations from lpbuildd.target.build_snap out to a module
    that can be used by other targets.
  * Allow checking out a git tag rather than a branch (LP: #1687078).
  * Add a local unauthenticated proxy on port 8222, which proxies through to
    the remote authenticated proxy.  This should allow running a wider range
    of network clients, since some of them apparently don't support
    authenticated proxies very well (LP: #1690834, #1753340).
  * Run tar with correct working directory when building source tarballs for
    snaps.

 -- Colin Watson <cjwatson@ubuntu.com>  Tue, 12 Jun 2018 08:50:40 +0100
