@@ -316,6 +316,7 @@ class TestBuildSnap(TestCase):
             "SNAPCRAFT_SETUP_CORE": "1",
             "SNAPCRAFT_BUILD_INFO": "1",
             "SNAPCRAFT_IMAGE_INFO": "{}",
+            "SNAPCRAFT_BUILD_ENVIRONMENT": "host",
             }
         self.assertThat(build_snap.backend.run.calls, MatchesListwise([
             RanBuildCommand(
@@ -338,6 +339,7 @@ class TestBuildSnap(TestCase):
             "SNAPCRAFT_BUILD_INFO": "1",
             "SNAPCRAFT_IMAGE_INFO": (
                 '{"build_url": "https://launchpad.example/build"}'),
+            "SNAPCRAFT_BUILD_ENVIRONMENT": "host",
             "http_proxy": "http://proxy.example:3128/",
             "https_proxy": "http://proxy.example:3128/",
             "GIT_PROXY_COMMAND": "/usr/local/bin/snap-git-proxy",
@@ -360,6 +362,7 @@ class TestBuildSnap(TestCase):
             "SNAPCRAFT_SETUP_CORE": "1",
             "SNAPCRAFT_BUILD_INFO": "1",
             "SNAPCRAFT_IMAGE_INFO": "{}",
+            "SNAPCRAFT_BUILD_ENVIRONMENT": "host",
             }
         self.assertThat(build_snap.backend.run.calls, MatchesListwise([
             RanBuildCommand(
@@ -383,7 +386,8 @@ class TestBuildSnap(TestCase):
         self.assertThat(build_snap.backend.run.calls, MatchesListwise([
             RanBuildCommand(
                 ["snapcraft"], cwd="/build/test-snap",
-                SNAPCRAFT_BUILD_INFO="1", SNAPCRAFT_IMAGE_INFO="{}"),
+                SNAPCRAFT_BUILD_INFO="1", SNAPCRAFT_IMAGE_INFO="{}",
+                SNAPCRAFT_BUILD_ENVIRONMENT="host"),
             ]))
 
     def test_build_proxy(self):
@@ -400,6 +404,7 @@ class TestBuildSnap(TestCase):
             "SNAPCRAFT_BUILD_INFO": "1",
             "SNAPCRAFT_IMAGE_INFO": (
                 '{"build_url": "https://launchpad.example/build"}'),
+            "SNAPCRAFT_BUILD_ENVIRONMENT": "host",
             "http_proxy": "http://proxy.example:3128/",
             "https_proxy": "http://proxy.example:3128/",
             "GIT_PROXY_COMMAND": "/usr/local/bin/snap-git-proxy",
@@ -431,12 +436,14 @@ class TestBuildSnap(TestCase):
                 SNAPCRAFT_LOCAL_SOURCES="1", SNAPCRAFT_SETUP_CORE="1",
                 SNAPCRAFT_BUILD_INFO="1",
                 SNAPCRAFT_IMAGE_INFO=(
-                    '{"build_url": "https://launchpad.example/build"}'))),
+                    '{"build_url": "https://launchpad.example/build"}'),
+                SNAPCRAFT_BUILD_ENVIRONMENT="host")),
             AnyMatch(RanBuildCommand(
                 ["snapcraft"], cwd="/build/test-snap",
                 SNAPCRAFT_BUILD_INFO="1",
                 SNAPCRAFT_IMAGE_INFO=(
-                    '{"build_url": "https://launchpad.example/build"}'))),
+                    '{"build_url": "https://launchpad.example/build"}'),
+                SNAPCRAFT_BUILD_ENVIRONMENT="host")),
             ))
 
     def test_run_install_fails(self):
